contrast fix

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -309,7 +309,7 @@ footer p {
     text-align: center;
 }
 #main3{
-    background-color: #000;
+    background-color: black;
     flex: 1;
 }
 
